Changelog
=========

1.5 - Unreleased
----------------


1.4 - 2008-09-10
----------------

* Fixed error with duplication of entries in the Available column. This fixes
  issue #9.
  [dunlapm]
  
* Fixed the long-standing issue with non-ascii characters in terms gathered from
  the catalog. Proper vocabularies should be just that, proper vocabularies
  where the "id" of a term consists of ascii characters and the "value" can
  contain unicode. Check the Vocabulary class in Products.Archetypes for a
  reference.
  [dunlapm]

1.3 - 2008-07-03
----------------

* Removed unecessary style attribute on the combo box text field which broke
  rendering in IE 7.
  [fschulze]

1.2 - 2008-06-27
----------------

* Added logic for drop-in replacement of KeywordWidget
  [dunlapm]

1.1 - 2008-05-20
----------------

* Initial release
