@@ -1,9 +1,3 @@
-from Products.CMFCore import utils
-from Products.CMFCore.DirectoryView import registerDirectory
-from config import *
-
-registerDirectory(SKINS_DIR, GLOBALS)
-
 from AddRemoveWidget import AddRemoveWidget
 from ComboBoxWidget import ComboBoxWidget
 
