@@ -1,6 +1,0 @@
-# just to be compatible with the general AT approach
-
-PROJECTNAME = "AddRemoveWidget"
-SKINS_DIR = 'skins'
-GLOBALS = globals()
-
