@@ -1,0 +1,18 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+           xmlns:cmf="http://namespaces.zope.org/cmf"
+           i18n_domain="AddRemoveWidget">
+
+  <cmf:registerDirectory name="AddRemoveWidget"/>
+
+  <genericsetup:registerProfile
+      name="default"
+      title="AddRemoveWidget"
+      directory="profiles/default"
+      description="Profile for AddRemoveWidget"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      for="Products.CMFPlone.interfaces.IPloneSiteRoot"
+      />           
+           
+</configure>
+           
